testing/Travis/testcases/Parsing/shouldFail/Issue1029a.adl
CONTEXT Issue1029a

RULE "aap": I[A]

PATTERN Dummy1
  RULE "aap": I[B] 
  RULE "aap": I[B] 
ENDPATTERN

PATTERN Dummy2
  RULE "aap": I[C] 
ENDPATTERN

ENDCONTEXT
